--- a/patterns/00-atoms-04-images-05-icons/00-atoms-04-images-05-icons.html
+++ b/patterns/00-atoms-04-images-05-icons/00-atoms-04-images-05-icons.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404133833" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404208011" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404133833" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404133833" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404208011" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404208011" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -38,26 +38,155 @@
 	</head>
 
 	<body class="body">
+<!-- GENERATED IN ICONS.PHP -->
 <h3>Iconit</h3>
-<ul class="icons">
-	<li> <i class="icon-search"></i></li>
-	<li> <i class="icon-play"></i></li>
-	<li> <i class="icon-ok"></i></li>
-	<li> <i class="icon-notify"></i></li>
-	<li> <i class="icon-warning"></i></li>
-	<li> <i class="icon-close"></i></li>
-	<li> <i class="icon-add"></i></li>
-	<li> <i class="icon-delete"></i></li>
-	<li> <i class="icon-tip"></i></li>
+<ul class='icons'>
+	<li> <i class='icon-search'></i></li>
+	<li> <i class='icon-play'></i></li>
+	<li> <i class='icon-ok'></i></li>
+	<li> <i class='icon-notify'></i></li>
+	<li> <i class='icon-warning'></i></li>
+	<li> <i class='icon-close'></i></li>
+	<li> <i class='icon-add'></i></li>
+	<li> <i class='icon-delete'></i></li>
+	<li> <i class='icon-tip'></i></li>
+
+	<li> <i class='om-lock'></i>om-lock</li>
+	<li> <i class='om-star'></i>om-star</li>
+	<li> <i class='om-clock'></i>om-clock</li>
+	<li> <i class='om-bars'></i>om-bars</li>
+	<li> <i class='om-search'></i>om-search</li>
+	<li> <i class='om-otakantaa'></i>om-otakantaa</li>
+	<li> <i class='om-kansalaisaloite'></i>om-kansalaisaloite</li>
+	<li> <i class='om-kuntalaisaloite'></i>om-kuntalaisaloite</li>
+	<li> <i class='om-document_circle'></i>om-document_circle</li>
+	<li> <i class='om-circle_blank'></i>om-circle_blank</li>
+	<li> <i class='om-lausuntopalvelu_circle'></i>om-lausuntopalvelu_circle</li>
+	<li> <i class='om-iteration_circle'></i>om-iteration_circle</li>
+	<li> <i class='om-discussion_circle'></i>om-discussion_circle</li>
+	<li> <i class='om-phone'></i>om-phone</li>
+	<li> <i class='om-chat_circle'></i>om-chat_circle</li>
+	<li> <i class='om-file_small_circle'></i>om-file_small_circle</li>
+	<li> <i class='om-keskustelu_circle'></i>om-keskustelu_circle</li>
+	<li> <i class='om-muu_verkkopalvelu_circle'></i>om-muu_verkkopalvelu_circle</li>
+	<li> <i class='om-gallup_circle'></i>om-gallup_circle</li>
+	<li> <i class='om-pencil_circle'></i>om-pencil_circle</li>
+	<li> <i class='om-legal_circle'></i>om-legal_circle</li>
+	<li> <i class='om-info_circle'></i>om-info_circle</li>
+	<li> <i class='om-kysely_circle'></i>om-kysely_circle</li>
+	<li> <i class='om-reload_sign'></i>om-reload_sign</li>
+	<li> <i class='om-ok_sign'></i>om-ok_sign</li>
+	<li> <i class='om-circle_search'></i>om-circle_search</li>
+	<li> <i class='om-chat'></i>om-chat</li>
+	<li> <i class='om-keskustelu'></i>om-keskustelu</li>
+	<li> <i class='om-muu_verkkopalvelu'></i>om-muu_verkkopalvelu</li>
+	<li> <i class='om-gallup'></i>om-gallup</li>
+	<li> <i class='om-facebook'></i>om-facebook</li>
+	<li> <i class='om-pencil'></i>om-pencil</li>
+	<li> <i class='om-legal'></i>om-legal</li>
+	<li> <i class='om-info'></i>om-info</li>
+	<li> <i class='om-kysely'></i>om-kysely</li>
+	<li> <i class='om-signin'></i>om-signin</li>
+	<li> <i class='om-signout'></i>om-signout</li>
+	<li> <i class='om-exclamation_circle'></i>om-exclamation_circle</li>
+	<li> <i class='om-remove_sign'></i>om-remove_sign</li>
+	<li> <i class='om-ok'></i>om-ok</li>
+	<li> <i class='om-light_bulb'></i>om-light_bulb</li>
+	<li> <i class='om-tasks'></i>om-tasks</li>
+	<li> <i class='om-file_small'></i>om-file_small</li>
+	<li> <i class='om-file_alt'></i>om-file_alt</li>
+	<li> <i class='om-file'></i>om-file</li>
+	<li> <i class='om-file_text'></i>om-file_text</li>
+	<li> <i class='om-uniF1C1'></i>om-uniF1C1</li>
+	<li> <i class='om-_422'></i>om-_422</li>
+	<li> <i class='om-_423'></i>om-_423</li>
+	<li> <i class='om-_424'></i>om-_424</li>
+	<li> <i class='om-_425'></i>om-_425</li>
+	<li> <i class='om-_426'></i>om-_426</li>
+	<li> <i class='om-_427'></i>om-_427</li>
+	<li> <i class='om-_428'></i>om-_428</li>
+	<li> <i class='om-_429'></i>om-_429</li>
+	<li> <i class='om-share'></i>om-share</li>
+	<li> <i class='om-trash'></i>om-trash</li>
+	<li> <i class='om-print'></i>om-print</li>
+	<li> <i class='om-paste'></i>om-paste</li>
+	<li> <i class='om-copy'></i>om-copy</li>
+	<li> <i class='om-share'></i>om-share</li>
+	<li> <i class='om-edit'></i>om-edit</li>
+	<li> <i class='om-question_ring'></i>om-question_ring</li>
+	<li> <i class='om-question_circle'></i>om-question_circle</li>
+	<li> <i class='om-question_default'></i>om-question_default</li>
+	<li> <i class='om-enter_sign'></i>om-enter_sign</li>
+	<li> <i class='om-enter'></i>om-enter</li>
+	<li> <i class='om-twitter_box'></i>om-twitter_box</li>
+	<li> <i class='om-youtube_box'></i>om-youtube_box</li>
+	<li> <i class='om-box_blank'></i>om-box_blank</li>
+	<li> <i class='om-rss_sign'></i>om-rss_sign</li>
+	<li> <i class='om-sign_blank'></i>om-sign_blank</li>
+	<li> <i class='om-facebook_sign'></i>om-facebook_sign</li>
+	<li> <i class='om-linkedin_sign'></i>om-linkedin_sign</li>
+	<li> <i class='om-linkedin'></i>om-linkedin</li>
+	<li> <i class='om-rss'></i>om-rss</li>
+	<li> <i class='om-twitter'></i>om-twitter</li>
+	<li> <i class='om-youtube'></i>om-youtube</li>
+	<li> <i class='om-code'></i>om-code</li>
+	<li> <i class='om-mail_sign'></i>om-mail_sign</li>
+	<li> <i class='om-mail'></i>om-mail</li>
+	<li> <i class='om-avatar_circle'></i>om-avatar_circle</li>
+	<li> <i class='om-avatar_outline'></i>om-avatar_outline</li>
+	<li> <i class='om-avatar_shield'></i>om-avatar_shield</li>
+	<li> <i class='om-avatar'></i>om-avatar</li>
+	<li> <i class='om-group_circle'></i>om-group_circle</li>
+	<li> <i class='om-group'></i>om-group</li>
+	<li> <i class='om-institution'></i>om-institution</li>
+	<li> <i class='om-household'></i>om-household</li>
+	<li> <i class='om-business'></i>om-business</li>
+	<li> <i class='om-caret_up'></i>om-caret_up</li>
+	<li> <i class='om-caret_right'></i>om-caret_right</li>
+	<li> <i class='om-caret_down'></i>om-caret_down</li>
+	<li> <i class='om-caret_left'></i>om-caret_left</li>
+	<li> <i class='om-caret_down_sign'></i>om-caret_down_sign</li>
+	<li> <i class='om-ring_outline'></i>om-ring_outline</li>
+	<li> <i class='om-double_angle_left'></i>om-double_angle_left</li>
+	<li> <i class='om-double_angle_right'></i>om-double_angle_right</li>
+	<li> <i class='om-double_angle_up'></i>om-double_angle_up</li>
+	<li> <i class='om-double_angle_down'></i>om-double_angle_down</li>
+	<li> <i class='om-angle_left'></i>om-angle_left</li>
+	<li> <i class='om-angle_right'></i>om-angle_right</li>
+	<li> <i class='om-angle_up'></i>om-angle_up</li>
+	<li> <i class='om-angle_down'></i>om-angle_down</li>
+	<li> <i class='om-angle_right_circle'></i>om-angle_right_circle</li>
+	<li> <i class='om-angle_up_circle'></i>om-angle_up_circle</li>
+	<li> <i class='om-angle_down_circle'></i>om-angle_down_circle</li>
+	<li> <i class='om-angle_left_circle'></i>om-angle_left_circle</li>
+	<li> <i class='om-small_arrow_down'></i>om-small_arrow_down</li>
+	<li> <i class='om-small_arrow_up'></i>om-small_arrow_up</li>
+	<li> <i class='om-small_arrow_left'></i>om-small_arrow_left</li>
+	<li> <i class='om-small_arrow_right'></i>om-small_arrow_right</li>
+	<li> <i class='om-circle_arrow_down'></i>om-circle_arrow_down</li>
+	<li> <i class='om-circle_arrow_up'></i>om-circle_arrow_up</li>
+	<li> <i class='om-circle_arrow_left'></i>om-circle_arrow_left</li>
+	<li> <i class='om-circle_arrow_right'></i>om-circle_arrow_right</li>
+	<li> <i class='om-ring_left'></i>om-ring_left</li>
+	<li> <i class='om-ring_right'></i>om-ring_right</li>
+	<li> <i class='om-spinner'></i>om-spinner</li>
+	<li> <i class='om-caret_up_sign'></i>om-caret_up_sign</li>
+	<li> <i class='om-caret_right_sign'></i>om-caret_right_sign</li>
+	<li> <i class='om-caret_left_sign'></i>om-caret_left_sign</li>
+	<li> <i class='om-plus_circle'></i>om-plus_circle</li>
+	<li> <i class='om-plus'></i>om-plus</li>
+	<li> <i class='om-warning_sign_outline'></i>om-warning_sign_outline</li>
+	<li> <i class='om-warning_sign'></i>om-warning_sign</li>
 </ul>
 
 <h4>Esimerkki iconien eri koista</h4>
-<ul class="icons icons-compare">
-	<li><i class="icon-ok size-s"></i>Pieni iconi</li>
-	<li><i class="icon-ok"></i>Normaali iconi</li>
-	<li><i class="icon-ok size-l"></i>Suuri iconi</li>
-	<li><i class="icon-ok size-xl"></i>Erittäin suuri iconi</li>
-</ul>	<script type="text/javascript" src="../../js/jquery-2.0.0b2.js"></script>
+<ul class='icons icons-compare'>
+	<li><i class='icon-ok size-s'></i>Pieni iconi</li>
+	<li><i class='icon-ok'></i>Normaali iconi</li>
+	<li><i class='icon-ok size-l'></i>Suuri iconi</li>
+	<li><i class='icon-ok size-xl'></i>Erittäin suuri iconi</li>
+</ul>
+	<script type="text/javascript" src="../../js/jquery-2.0.0b2.js"></script>
 	<!--
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	-->
@@ -110,10 +239,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404133833">
+	<script id="pl-js-polyfill-insert-1404208011">
 		(function() {
 			if (self != top) {
-				var cb = '1404133833';
+				var cb = '1404208011';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -122,10 +251,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404133833">
+	<script id="pl-js-insert-1404208011">
 		(function() {
 			if (self != top) {
-				var cb = '1404133833';
+				var cb = '1404208011';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
