Changes to btn-group enlarged. Added wrapper class for it too.

--- a/patterns/00-atoms-06-buttons-01-button-groups/00-atoms-06-buttons-01-button-groups.escaped.html
+++ b/patterns/00-atoms-06-buttons-01-button-groups/00-atoms-06-buttons-01-button-groups.escaped.html
@@ -16,14 +16,20 @@
 	&lt;input type=&quot;submit&quot; value=&quot;Osallistumisraportti&quot;&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;btn-group enlarged&quot;&gt;
-	&lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Painike 1&lt;span class=&quot;count&quot;&gt;A&lt;/span&gt;&lt;/a&gt;
-	&lt;a href=&quot;#&quot;&gt;Painike 2&lt;span class=&quot;count&quot;&gt;B&lt;/span&gt;&lt;/a&gt;
-	&lt;a href=&quot;#&quot;&gt;Painike 3&lt;span class=&quot;count&quot;&gt;C&lt;/span&gt;&lt;/a&gt;
-	&lt;a href=&quot;#&quot;&gt;Painike 4&lt;span class=&quot;count&quot;&gt;D&lt;/span&gt;&lt;/a&gt;
-	&lt;a href=&quot;#&quot;&gt;Painike 5&lt;span class=&quot;count&quot;&gt;E&lt;/span&gt;&lt;/a&gt;
-	&lt;a href=&quot;#&quot;&gt;Painike 6&lt;span class=&quot;count&quot;&gt;F&lt;/span&gt;&lt;/a&gt;
+&lt;!-- Muutokset 2.7.2014: Lis&auml;tty luokka btn-group-wrapper, jota tulee k&auml;ytt&auml;&auml; enlarged button groupin kanssa. Lis&auml;ksi enlargedin sis&auml;ll&auml; voi k&auml;ytt&auml;&auml; inline-row luokkaa, joka sitoo sen sis&auml;ll&auml; olevat sanat samalle riville.  --&gt;
+
+&lt;div class=&quot;btn-group-wrapper&quot;&gt;
+	&lt;div class=&quot;btn-group enlarged&quot;&gt;
+		&lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Painike 1&lt;span class=&quot;count&quot;&gt;A&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot;&gt;&lt;span class=&quot;inline-row&quot;&gt;Painike 2&lt;/span&gt;&lt;span class=&quot;count&quot;&gt;B&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot;&gt;Painike 3&lt;span class=&quot;count&quot;&gt;C&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot;&gt;Painike 4&lt;span class=&quot;count&quot;&gt;D&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot;&gt;Painike 5&lt;span class=&quot;count&quot;&gt;E&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot;&gt;Painike 6&lt;span class=&quot;count&quot;&gt;F&lt;/span&gt;&lt;/a&gt;
+	&lt;/div&gt;
 &lt;/div&gt;
+
+
 
 &lt;div class=&quot;btn-group sorting&quot;&gt;
 	&lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Lajittelu 1&lt;/a&gt;
