Various bug fixes and small tweaks.

--- a/patterns/02-organisms-03-sections-07-list-lift2/02-organisms-03-sections-07-list-lift2.escaped.html
+++ b/patterns/02-organisms-03-sections-07-list-lift2/02-organisms-03-sections-07-list-lift2.escaped.html
@@ -1,12 +1,15 @@
 &lt;div class=&quot;list-lift&quot;&gt;
 	&lt;div class=&quot;navigation&quot;&gt;
-		&lt;div class=&quot;btn-group enlarged&quot;&gt;
-			&lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Painike 1&lt;span class=&quot;count&quot;&gt;3&lt;/span&gt;&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 2&lt;span class=&quot;count&quot;&gt;15&lt;/span&gt;&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 3&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 4&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 5&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 6&lt;span class=&quot;count&quot;&gt;66&lt;/span&gt;&lt;/a&gt;
+
+		&lt;div class=&quot;btn-group-wrapper&quot;&gt;
+			&lt;div class=&quot;btn-group enlarged&quot;&gt;
+				&lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Painike 1&lt;span class=&quot;count&quot;&gt;3&lt;/span&gt;&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 2&lt;span class=&quot;count&quot;&gt;15&lt;/span&gt;&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 3&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 4&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 5&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 6&lt;span class=&quot;count&quot;&gt;66&lt;/span&gt;&lt;/a&gt;
+			&lt;/div&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;tag-search-container&quot;&gt;
 			&lt;ul id=&quot;otakantaa-tags&quot; class=&quot;tagit-list&quot;&gt;&lt;/ul&gt;		&lt;/div&gt;
