--- a/patterns/02-organisms-03-sections-07-list-lift2/02-organisms-03-sections-07-list-lift2.html
+++ b/patterns/02-organisms-03-sections-07-list-lift2/02-organisms-03-sections-07-list-lift2.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404314835" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404372487" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404314835" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404314835" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404372487" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404372487" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -40,13 +40,16 @@
 	<body class="body">
 <div class="list-lift">
 	<div class="navigation">
-		<div class="btn-group enlarged">
-			<a href="#" class="active">Painike 1<span class="count">3</span></a>
-			<a href="#">Painike 2<span class="count">15</span></a>
-			<a href="#">Painike 3</a>
-			<a href="#">Painike 4</a>
-			<a href="#">Painike 5</a>
-			<a href="#">Painike 6<span class="count">66</span></a>
+
+		<div class="btn-group-wrapper">
+			<div class="btn-group enlarged">
+				<a href="#" class="active">Painike 1<span class="count">3</span></a>
+				<a href="#">Painike 2<span class="count">15</span></a>
+				<a href="#">Painike 3</a>
+				<a href="#">Painike 4</a>
+				<a href="#">Painike 5</a>
+				<a href="#">Painike 6<span class="count">66</span></a>
+			</div>
 		</div>
 		<div class="tag-search-container">
 			<ul id="otakantaa-tags" class="tagit-list"></ul>		</div>
@@ -186,10 +189,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404314835">
+	<script id="pl-js-polyfill-insert-1404372487">
 		(function() {
 			if (self != top) {
-				var cb = '1404314835';
+				var cb = '1404372487';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -198,10 +201,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404314835">
+	<script id="pl-js-insert-1404372487">
 		(function() {
 			if (self != top) {
-				var cb = '1404314835';
+				var cb = '1404372487';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
