--- a/patterns/02-organisms-03-sections/index.html
+++ b/patterns/02-organisms-03-sections/index.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404314835" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404372487" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404314835" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404314835" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404372487" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404372487" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -680,13 +680,16 @@
 						<div class="sg-pattern-body">
 							<div class="list-lift">
 	<div class="navigation">
-		<div class="btn-group enlarged">
-			<a href="#" class="active">Painike 1<span class="count">3</span></a>
-			<a href="#">Painike 2<span class="count">15</span></a>
-			<a href="#">Painike 3</a>
-			<a href="#">Painike 4</a>
-			<a href="#">Painike 5</a>
-			<a href="#">Painike 6<span class="count">66</span></a>
+
+		<div class="btn-group-wrapper">
+			<div class="btn-group enlarged">
+				<a href="#" class="active">Painike 1<span class="count">3</span></a>
+				<a href="#">Painike 2<span class="count">15</span></a>
+				<a href="#">Painike 3</a>
+				<a href="#">Painike 4</a>
+				<a href="#">Painike 5</a>
+				<a href="#">Painike 6<span class="count">66</span></a>
+			</div>
 		</div>
 		<div class="tag-search-container">
 			<ul id="otakantaa-tags" class="tagit-list"></ul>		</div>
@@ -787,13 +790,16 @@
 									<code>
 										&lt;div class=&quot;list-lift&quot;&gt;
 	&lt;div class=&quot;navigation&quot;&gt;
-		&lt;div class=&quot;btn-group enlarged&quot;&gt;
-			&lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Painike 1&lt;span class=&quot;count&quot;&gt;3&lt;/span&gt;&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 2&lt;span class=&quot;count&quot;&gt;15&lt;/span&gt;&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 3&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 4&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 5&lt;/a&gt;
-			&lt;a href=&quot;#&quot;&gt;Painike 6&lt;span class=&quot;count&quot;&gt;66&lt;/span&gt;&lt;/a&gt;
+
+		&lt;div class=&quot;btn-group-wrapper&quot;&gt;
+			&lt;div class=&quot;btn-group enlarged&quot;&gt;
+				&lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Painike 1&lt;span class=&quot;count&quot;&gt;3&lt;/span&gt;&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 2&lt;span class=&quot;count&quot;&gt;15&lt;/span&gt;&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 3&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 4&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 5&lt;/a&gt;
+				&lt;a href=&quot;#&quot;&gt;Painike 6&lt;span class=&quot;count&quot;&gt;66&lt;/span&gt;&lt;/a&gt;
+			&lt;/div&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;tag-search-container&quot;&gt;
 			&lt;ul id=&quot;otakantaa-tags&quot; class=&quot;tagit-list&quot;&gt;&lt;/ul&gt;		&lt;/div&gt;
@@ -941,10 +947,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404314835">
+	<script id="pl-js-polyfill-insert-1404372487">
 		(function() {
 			if (self != top) {
-				var cb = '1404314835';
+				var cb = '1404372487';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -953,10 +959,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404314835">
+	<script id="pl-js-insert-1404372487">
 		(function() {
 			if (self != top) {
-				var cb = '1404314835';
+				var cb = '1404372487';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
